src/objects/ACCL__Product_Assortment_Product__c.object
<CustomObject>
    <description>Holds the relationship between a product assortment and a product.A product-assortment-relation is time-dependent. Assortments can be used as set of products which are restricted to an industry or a sales channel.</description>
    <fields>
        <fullName>ACCL__Account_Product_Number__c</fullName>
        <description>Customer specific product number.</description>
        <label>Customer Product Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active flag.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Distribution__c</fullName>
        <description>Target Value for primary survey question &apos;Distribution&apos;.</description>
        <label>Distribution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributed</fullName>
                </value>
                <value>
                    <fullName>NotDistributed</fullName>
                </value>
                <value>
                    <fullName>OutOfStock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Facings__c</fullName>
        <description>Target Value for primary survey question &apos;Facings&apos;.</description>
        <label>Facings</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Focus_Product_Type__c</fullName>
        <description>Defines focus product type.</description>
        <label>Focus Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Focus</fullName>
                </value>
                <value>
                    <fullName>Top10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Price_Survey__c</fullName>
        <description>Target Value for primary survey question &apos;Price Survey&apos;.</description>
        <label>Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Product_Assortment__c</fullName>
        <description>Reference to the assortment the product relation belongs to.</description>
        <label>Product Assortment</label>
        <referenceTo>ACCL__Product_Assortment__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Product_Assortment_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Product__c</fullName>
        <description>Reference to a product assigned to the assortment.</description>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Product Assortment Products</relationshipLabel>
        <relationshipName>Product_Assortment_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the Product Assortment Product record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>MDLZ_InventoryDOS__c</fullName>
        <defaultValue>NULL</defaultValue>
        <label>Inventory DOS</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_InventoryOOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if product is out of stock</description>
        <label>Inventory OOS</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>MDLZ_OOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product is OOS at store listing level</description>
        <label>OOS</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>MDLZ_SAPInventory__c</fullName>
        <label>SAP Inventory</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>MDLZ_Backstock__c</fullName>
        <label>Back stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
	<fields>
        <fullName>MDLZ_SchematicsDown__c</fullName>
        <label>Schematics Down</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MDLZ_SchematicsSection__c</fullName>
        <label>Schematics Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cookies</fullName>
                </value>
                <value>
                    <fullName>Specialty Cookies</fullName>
                </value>
                <value>
                    <fullName>Secondary Cookies</fullName>
                </value>
                <value>
                    <fullName>Single serve</fullName>
                </value>
                <value>
                    <fullName>Lunch Box</fullName>
                </value>
                <value>
                    <fullName>Crackers</fullName>
                </value>
                <value>
                    <fullName>Secondary Crackers</fullName>
                </value>
                <value>
                    <fullName>Specialty Crackers</fullName>
                </value>
                <value>
                    <fullName>Cones</fullName>
                </value>
                <value>
                    <fullName>Baking</fullName>
                </value>
                <value>
                    <fullName>Better for you</fullName>
                </value>
                <value>
                    <fullName>FEM(Front End Merchandiser)</fullName>
                </value>
                <value>
                    <fullName>Seasonal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Club</fullName>
                </value>
                <value>
                    <fullName>Candy</fullName>
                </value>
                <value>
                    <fullName>Demo Cookies &amp; Crackers</fullName>
                </value>
				<value>
				     <fullName>No Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDLZ_SchematicsSort__c</fullName>
        <label>Schematics Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_SchematicsUp__c</fullName>
        <label>Schematics Up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MDLZ_StoreAlloc__c</fullName>
        <label>Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_UPC2__c</fullName>
        <label>Alternate Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product Assortment Product</label>
    <nameField>
        <displayFormat>PAP-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Assortment Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same</fullName>
        <active>true</active>
        <description>The Product and the Product Assortment must have the same Sales Org.</description>
        <errorConditionFormula>ACCL__Product__r.ACCL__Sales_Org__c &lt;&gt;  ACCL__Product_Assortment__r.ACCL__Sales_Org__c</errorConditionFormula>
        <errorMessage>The Product and the Product Assortment must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>